# spring-autoconf-bug-repro

./: .gitignore  WORKSPACE  repository_rules.bzl
google/cloud/asset/v1/: BUILD.bazel
