package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_google_googleapis_imports//:imports.bzl", "proto_library_with_info")



proto_library(
    name = "asset_proto",
    srcs = [
        "asset_service.proto",
        "assets.proto",
    ],
    deps = [
       #"//google/api:annotations_proto",
       #"//google/api:client_proto",
       #"//google/api:field_behavior_proto",
       #"//google/api:resource_proto",
       #"//google/cloud/orgpolicy/v1:orgpolicy_proto",
       #"//google/cloud/osconfig/v1:osconfig_proto",
       #"//google/iam/v1:policy_proto",
       #"//google/identity/accesscontextmanager/type:type_proto",
       #"//google/identity/accesscontextmanager/v1:accesscontextmanager_proto",
       #"//google/longrunning:operations_proto",
       #"//google/rpc:code_proto",
       #"//google/rpc:status_proto",
       #"//google/type:expr_proto",
       #"@com_google_protobuf//:any_proto",
       #"@com_google_protobuf//:duration_proto",
       #"@com_google_protobuf//:empty_proto",
       #"@com_google_protobuf//:field_mask_proto",
       #"@com_google_protobuf//:struct_proto",
       #"@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library_with_info(
    name = "asset_proto_with_info",
    deps = [
        ":asset_proto",
       #"//google/cloud:common_resources_proto",
    ],
)

load(
    "@com_google_googleapis_imports//:imports.bzl",
    "java_gapic_spring_library"
)

java_gapic_spring_library(
    name = "asset_java_gapic_spring",
    srcs = [":asset_proto_with_info"],
    grpc_service_config = "cloudasset_grpc_service_config.json",
    service_yaml = "cloudasset_v1.yaml",
    transport = "grpc+rest",
)
